# rune

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.claude/: continuance-prompt.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug.yml  design-decision.yml  task.yml
.github/rulesets/: README.md  main.json
.github/workflows/: agent-task-implement.yml  ai-review-prepare.yml  ai-review.yml  ci.yml  claude-code-review.yml  claude.yml  deny.yml
clients/web/: .env.example  .prettierignore  AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/rune-cli/: Cargo.toml
crates/rune-cli/src/: agent.rs  lib.rs  lobby.rs  main.rs
crates/rune-cli/src/agent/: policy.rs
crates/rune-cli/src/agent/policy/: fill.rs
crates/rune-cli/tests/: agent.rs  agent_game.rs  commander_game.rs  ffa_game.rs  lobby.rs  session.rs
crates/rune-engine/: AGENTS.md  Cargo.toml  build.rs
crates/rune-engine/data/: cards.json  exclusions.json  oracle.json
crates/rune-engine/data/catalog/: aegis_of_the_heavens.json  air_elemental.json  bogstomper.json  bramble_hatchling.json  bramblefang_spider.json  cancel.json  centaur_courser.json  child_of_night.json  cinder_shock.json  cleric_of_the_sunwell.json  colossal_dreadmaw.json  copper_lodestone.json  cryptvine_lurker.json  dawnblade_duelist.json  daybreak_chaplain.json  diregraf_ghoul.json  divination.json  druid_of_the_cowl.json  electrify.json  emberfang_jackal.json  emberrush_raider.json  field_creeper.json  fire_elemental.json  flight.json  forest.json  giant_spider.json  gigantosaurus.json  gorehorn_ravager.json  greenwood_sentinel.json  havoc_devils.json  highland_game.json  hostile_minotaur.json  hurried_study.json  ironbark_aegis.json  ironwatch_sentinel.json  island.json  jedit_ojanen.json  jump.json  knight_of_the_tusk.json  knight_s_pledge.json  (+52 more)
crates/rune-engine/data/sets/: FIX.json  FIX2.json  M19.json  PM19.json
crates/rune-engine/src/: ability.rs  actions.rs  apply.rs  automation.rs  card.rs  card_type.rs  catalog.rs  characteristics.rs  combat.rs  commander.rs  compat.rs  fixtures.rs  id.rs  lib.rs  mana.rs  mulligan.rs  phase.rs  player.rs  resolve.rs  rng.rs  sba.rs  scripted.rs  setup.rs  stack.rs  state.rs  triggers.rs  zone.rs
crates/rune-engine/src/actions/: definition.rs  generation.rs  legality.rs  targeting.rs  tests.rs  utilities.rs
crates/rune-engine/src/apply/: cast.rs  combat.rs  commander.rs  mulligan.rs  test_support.rs  turn.rs
crates/rune-engine/src/card/: aura.rs  card_data.rs  catalog.rs  database.rs  error.rs  helpers.rs  keyword.rs  printing.rs  rarity.rs  tests.rs
crates/rune-engine/src/combat/: damage.rs  declaration.rs  eligibility.rs  helpers.rs
crates/rune-engine/src/state/: log.rs  mod.rs  query.rs  setup.rs  tests.rs  turn.rs  types.rs  zone.rs
crates/rune-engine/tests/: commander_zone.rs  compat.rs  game_log.rs
crates/rune-protocol/: Cargo.toml
crates/rune-protocol/fixtures/: gameview-over.json  gameview-prompts.json  gameview.json
crates/rune-protocol/src/: action.rs  card.rs  catalog.rs  client.rs  lib.rs  lobby.rs  log.rs  result.rs  spectator.rs  view.rs
crates/rune-server/: Cargo.toml
crates/rune-server/src/: ai.rs  catalog.rs  format.rs  lib.rs  lobby.rs  main.rs  room.rs  rules_text.rs  test_support.rs  view.rs
crates/rune-server/src/lobby/: commands.rs  registry.rs  test_support.rs  views.rs
crates/rune-server/src/room/: broadcast.rs  connection.rs  driver.rs  handle.rs  input.rs  policy.rs  test_support.rs
crates/rune-server/src/view/: actions.rs  binding.rs  cards.rs  ids.rs  log.rs  prompt.rs  requirements.rs  test_support.rs
crates/rune-server/tests/: accept.rs  lobby.rs  pregame.rs  room.rs
docs/: brief.md  card-schema.md  coding-standards.md  compatibility-report.md  protocol.md  roadmap.md  rules-coverage.md
docs/agents/: ai-review.md  backlog.md  continuance.md  local-ai-setup.md  milestone-audit-2026-07-12.md  workflow.md
docs/decisions/: 0000-template.md  0001-record-architecture-decisions.md  0002-server-authoritative-immutable-engine.md  0003-dom-canvas-split.md  0004-subject-owned-actions.md  0005-license.md  0006-serde-in-engine.md  0007-card-effect-ir-hybrid.md  0008-tokio-websocket-server.md  0009-targeting-model.md  0010-computed-characteristics-and-layers.md  0011-e2e-browser-test-strategy.md  0012-lobby-protocol.md  0013-card-identity-and-set-model.md  0014-deterministic-seeded-shuffle.md  0015-independent-ai-pr-review.md  0016-provider-neutral-issue-runner.md  0017-milestone-stewardship-cycle.md  0018-scalable-functional-card-definitions.md  0019-chrome-styling-layer.md  0020-game-log-history.md  0020-priority-automation.md  0021-game-log-history.md  0022-spectator-view-model.md  0023-fixed-shell-anatomy.md  0024-user-side-card-art.md  0025-direct-entity-activation.md  0026-real-functional-card-data.md  0027-deck-persistence.md  0028-ai-opponents.md  0029-2-5d-presentation-direction.md  0030-2-5d-presentation-architecture.md  0031-bundled-asset-policy.md
docs/design/: asset-pipeline.md  layout-model.md  presentation-budgets.md  spike-2-5d-findings.md  ui-blueprint.md  ui-design-notes.md  ui-redesign-plan.md  ui-requirements.md  visual-system.md
prototypes/: README.md  ui-2-5d-layouts-v1.html  ui-2-5d-spike-v1.html  ui-battlefield-v3.html  ui-table-4p-laptop-v1.html  ui-table-4p-tablet-v1.html  ui-table-duel-phone-v1.html
scripts/: agent-cycle  agent-task  bootstrap.sh  bot-pr.sh  bot-push.sh  bot-token.sh  install-actionlint.sh  local-agent.sh.example
tools/agent-task/: Dockerfile  adapters.js  adapters.test.js  audit.js  audit.test.js  brief.js  brief.test.js  claim.js  claim.test.js  cli.js  config.js  cycle-cli.js  cycle-evidence.js  cycle-evidence.test.js  cycle-main.js  cycle-main.test.js  cycle-roadmap.js  cycle-roadmap.test.js  cycle-state.js  cycle-state.test.js  diff.js  diff.test.js  doctor.js  doctor.test.js  events.js  events.test.js  (+25 more)
(+235 files in other folders)
