[workspace]
resolver = "2"
members = [
    "crates/rune-engine",
    "crates/rune-protocol",
    "crates/rune-server",
    "crates/rune-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ninthworld/rune"

# Coding standards are enforced here (docs/coding-standards.md). These apply to
# every crate via `[lints] workspace = true`. Baseline: practical-strict —
# deny warnings, forbid panicking APIs outside tests, require docs on public
# items. clippy::pedantic/nursery are deliberately NOT enabled.
[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Panicking APIs are banned in non-test code; test modules opt back in with a
# module-level `#![allow(...)]` (see docs/coding-standards.md).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# No debugging/placeholder leftovers in committed code.
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
