[package]
name = "rune-engine"
description = "RUNE rules engine: pure, immutable game state machine (layer 3)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The engine must stay free of I/O and runtime dependencies. serde/serde_json
# are permitted solely for parsing compile-time-embedded data snapshots (bundled
# card data) — no filesystem, network, or runtime services. See
# docs/decisions/0006-serde-in-engine.md. Any further dependency needs its own ADR.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
