[package]
name = "rune-protocol"
description = "RUNE client/server protocol types: GameView, valid actions, action choice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# This crate is the one place wire-format dependencies are expected: it defines
# the JSON contract every client and the server serialize to and from.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
