[package]
name = "rune-server"
description = "RUNE match server: lobby + rooms (layers 1-2) wrapping the rules engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rune-engine = { path = "../rune-engine" }
rune-protocol = { path = "../rune-protocol" }
# tokio, tokio-tungstenite, etc. arrive with the first server milestone.

[lints]
workspace = true
