[package]
name = "rune-server"
description = "RUNE match server: lobby + rooms (layers 1-2) wrapping the rules engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rune-engine = { path = "../rune-engine" }
rune-protocol = { path = "../rune-protocol" }
# Serialize the JSON protocol at the transport boundary. serde_json is already the
# workspace's wire codec (rune-protocol, rune-engine); the server speaks the same
# JSON, so this is not a materially new dependency (ADR-0008 covers the stack).
serde_json = "1"
# Async transport stack — see docs/decisions/0008-tokio-websocket-server.md.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "signal",
    "sync",
    "io-util",
    "time",
] }
# TLS is out of scope for this milestone: pull only the server handshake, no
# native-tls/rustls surface (ADR-0008).
tokio-tungstenite = { version = "0.24", default-features = false, features = [
    "handshake",
] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# The accept-path integration test drives the server with a real WebSocket
# client; `connect_async` needs the client half of the handshake.
tokio-tungstenite = { version = "0.24", default-features = false, features = [
    "connect",
    "handshake",
] }

[lints]
workspace = true
